manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: bits-demo
spec:
  type: NodePort
  selector:
    app: hello
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http
